kubernetes-bonus/flask-new-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-web
  labels:
    app: flask-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-web 
  template:
    metadata:
      labels:
        app: flask-web
    spec:
      containers:
        - name: flask-web
          image: diskoproject/flask-web-1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: flask-port
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5

---

apiVersion: v1
kind: Service 
metadata: 
  name: flask-service
spec:
  selector:
    app: flask-web 
  type: LoadBalancer # Or LoadBalancer if Ingress doesn't work for you
  ports:
    - name: flask-port
      port: 5000
      targetPort: 5000
      protocol: TCP
