kubernetes-bonus/ingress-flsk-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flask-web
spec:
  ingressClassName: nginx
  rules:
  - host: flask-web.local
    http:               
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: flask-service
            port:
              number: 5000
