kubernetes-bonus/new-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: flask.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
